Fix icon alignment

--- a/src/app/contact-link/contact-link.component.scss
+++ b/src/app/contact-link/contact-link.component.scss
@@ -11,4 +11,7 @@
 .logo {
     width: 1.2em;
     height: 1.2em;
+
+    position: relative;
+    top: 0.1em;
 }
